--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medellín vai</title>
+    <title>Medellin Vibe</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ENjdO4Dr2bkBIFxQpeoA6DQD5KkUaa8hDdP+3p1j/tM0Uod8GCExl3Og8ifwB6V1" crossorigin="anonymous">
     <!-- Animate.css for animations -->
@@ -597,7 +597,7 @@
                 </svg>
             </div>
             <div class="container hero-content">
-                <h1 class="animate__animated animate__fadeInDown">🌄 Medellín Vibe</h1>
+                <h1 class="animate__animated animate__fadeInDown">🌄 Medellin Vibe</h1>
                 <p class="animate__animated animate__fadeInUp">Descubre, conecta y disfruta la ciudad de la eterna primavera</p>
             </div>
         </section>
@@ -1052,7 +1052,7 @@
 
         // Fetch weather and update recommendations on load
         window.onload = function() {
-            fetch('https://api.openweathermap.org/data/2.5/weather?q=Medellín&appid=YOUR_API_KEY&units=metric')
+            fetch('https://api.openweathermap.org/data/2.5/weather?q=Medellin&appid=YOUR_API_KEY&units=metric')
                 .then(response => response.json())
                 .then(data => {
                     currentWeather = {
